--- a/index.html
+++ b/index.html
@@ -221,29 +221,31 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 					</li>
 					<li>
 						<div class="links">
-							<a href="http://twitter.com/fat" class="twitter icon" title="@fat" target="_blank"></a>
+							<a href="http://twitter.com/secoif" class="twitter icon" target="_blank" title="@secoif"></a>
 						</div>
-						<div class="img"><img src="static2/img/speakers/jacobthornton.png" alt="Jacob Thornton" border="0" /></div>
+						<div class="img"><img src="static2/img/speakers/timoxley.png" alt="Tim Oxley" border="0" /></div>
 						<div class="name">
-							♒∆✝
+							Tim Oxley
 						</div>
 						<div class="bio">
-							Fat, with real name Jacob Thornton, is an engineer at <a href="http://twitter.com" target="_blank">Twitter</a> and the co-author of some pretty nifty open source projects: <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a>, <a href="http://ender.no.de/" target="_blank">Ender</a>, <a href="http://twitter.github.com/hogan.js/" target="_blank">Hogan.js</a>...
-							He studied literature in school, which means he has no clue what he's doing and is hyper critical of everything.
+							Tim is a JavaScript freelancer from Brisbane, working with the node.js platform and client-side MVC applications. He is passionate about readable, maintainable, organized code though best-practices, refactoring and tests.
+							He works alongside Rails developers for international clients and organizes <a href="http://campjs.com">CampJS</a> in Australia.
 						</div>
 					</li>
 					<li>
+						<div class="links">
+							<a href="http://twitter.com/drbernhard" class="twitter icon" target="_blank" title="@drbernhard"></a>
+						</div>
+						<div class="img"><img src="static2/img/speakers/janjongboom.png" alt="Jan Jongboom" border="0" /></div>
 						<div class="name">
-							Check back every week
+							Jan Jongboom
 						</div>
 						<div class="bio">
-							We'll reveal more speakers every week. Be sure to check back and get the updates!<br/><br/>
-							Follow us on <a href="http://twitter.com/jscamp_asia" target="_blank">Twitter</a><br/>
-							and <a href="http://facebook.com/javascriptcamp" target="_blank">Facebook</a><br/><br/>
-							Tell us who you miss on this list in our 
-							<a href="http://jscamp.wufoo.com/forms/call-for-speakers" target="_blank">Call for Speakers</a>!
+							Jan Jongboom got in a real life fight when someone declared JavaScript 'just some scripting language'. During the day he channels his JavaScript love as a member of the <a href="http://c9.io" target="_blank">Cloud9 IDE</a> development team,
+							making bad jokes about VBScript and dreaming of happy hour. The only native Brit in the company described him in one word: 'cheeky'. You can see him live on stage regularly, with talks about Cloud9, node.js, scaling and mobile development.
 						</div>
 					</li>
+
 				</ul>
 				<ul class="speakers">
 					<li>
@@ -263,15 +265,34 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 					</li>
 					<li>
 						<div class="links">
-							<a href="http://twitter.com/drbernhard" class="twitter icon" target="_blank" title="@drbernhard"></a>
+							<a href="http://twitter.com/wonderchook" class="twitter icon" target="_blank" title="@wonderchook"></a>
 						</div>
-						<div class="img"><img src="static2/img/speakers/janjongboom.png" alt="Jan Jongboom" border="0" /></div>
+						<div class="img"><img src="static2/img/speakers/katechapman.png" alt="Kate Chapman" border="0" /></div>
 						<div class="name">
-							Jan Jongboom
+							Kate Chapman
 						</div>
 						<div class="bio">
-							Jan Jongboom got in a real life fight when someone declared JavaScript 'just some scripting language'. During the day he channels his JavaScript love as a member of the <a href="http://c9.io" target="_blank">Cloud9 IDE</a> development team,
-							making bad jokes about VBScript and dreaming of happy hour. The only native Brit in the company described him in one word: 'cheeky'. You can see him live on stage regularly, with talks about Cloud9, node.js, scaling and mobile development.
+							Kate Chapman is the Executive Director and a founding member of the
+							<a href="http://hot.openstreetmap.org/" target="_blank">Humanitarian OpenStreetMap Team (HOT)</a>.  HOT utilizes OpenStreetMap to
+							create free geographic data for disaster preparedness, response, and
+							recovery. 
+							Kate's most recent work has been in Indonesia in partnership with
+							<a href="http://www.ausaid.gov.au/Pages/home.aspx" target="_blank">AusAID</a> and the <a href="http://www.bnpb.go.id/website/asp/index.asp" target="_blank">Indonesian National Disaster Management Agency (BNPB)</a>
+							to collect infrastructure data. Kate was involved in development of multiple web-GIS applications.
+							She acted as Developer Community Lead for <a href="http://geocommons.com/" target="_blank">GeoCommons</a> and served in
+							various technical roles at <a href="http://imapdata.com/" target="_blank">iMapData</a>.
+						</div>
+					</li>
+					<li>
+						<div class="name">
+							Check back every week
+						</div>
+						<div class="bio">
+							We'll reveal more speakers every week. Be sure to check back and get the updates!<br/><br/>
+							Follow us on <a href="http://twitter.com/jscamp_asia" target="_blank">Twitter</a><br/>
+							and <a href="http://facebook.com/javascriptcamp" target="_blank">Facebook</a><br/><br/>
+							Tell us who you miss on this list in our 
+							<a href="http://jscamp.wufoo.com/forms/call-for-speakers" target="_blank">Call for Speakers</a>!
 						</div>
 					</li>
 				</ul>
