--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 				<div class="back">
 					<div id="sponsorsplash">
 						with kind support of<br/>
-						<a href="http://www.google.com/about/" target="_blank"><img src="static2/img/sponsors/google.png" /></a>
-						<a href="http://www.softlayer.com" target="_blank"><img src="static2/img/sponsors/softlayer.png" /></a>
+						<a href="http://www.google.com/about/" target="_blank"><img src="static2/img/sponsors/google.png" width="135" /></a>
+						<a href="http://www.softlayer.com" target="_blank"><img src="static2/img/sponsors/softlayer.png" width="135" /></a>
+						<a href="https://www.paypal.com.sg/" target="_blank"><img src="static2/img/sponsors/paypal.png" width="135" /></a>
+						<a href="http://www.microsoft.com/en-sg/" target="_blank"><img src="static2/img/sponsors/microsoft.png" width="135" /></a>
 					</div>
 				</div>
 			</div>
@@ -492,11 +494,13 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 						</div>
 					</li>
 					<li>
-						<div class="name">
-							Become a Sponsor
+						<div class="links">
+							<a href="http://microsoft.com.sg/" target="_blank" class="www icon">www</a>
+							<a href="http://twitter.com/microsoft_sg" target="_blank" class="twitter icon" title="@microsoft_sg"></a>
 						</div>
+						<div class="img"><a href="http://microsoft.com.sg/" target="_blank"><img src="static2/img/sponsors/microsoft.png" /></a></div>
 						<div class="bio">
-							We are eager to make JScamp the web and mobile developer conference of the year and there is much to benefit from as our sponsor. <a href="mailto:sponsors@jscamp.asia">Drop us a mail</a>
+							The biggest software company in the world has a long history of support for the Southeast Asian developer community. With their Windows and Office products they power the most popular platforms for developers to work with.
 						</div>
 					</li>
 				</ul>
@@ -512,8 +516,6 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 							We are happy that they support us in our mission to bring you a great conference.
 						</div>
 					</li>
-				</ul>
-				<ul class="speakers">
 					<li>
 						<div class="links">
 							<a href="http://www.adzcentral.com" target="_blank" class="www icon">www</a>
@@ -523,6 +525,26 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 						<div class="bio">
 							ADZ is South-East Asia's first online advertisement Demand-Side Platform. Build on top of state-of-the-art Real-Time-Bidding infrastructure ADZ uses huge amounts
 							of JavaScript to deliver the best user experience in the industry.
+						</div>
+					</li>
+				</ul>
+				<ul class="speakers">
+					<li>
+						<div class="links">
+							<a href="http://www.paypal.com.sg" target="_blank" class="www icon">www</a>
+							<a href="http://twitter.com/paypal" class="twitter icon" target="_blank" title="@paypal"></a>
+						</div>
+						<div class="img"><a href="http://www.paypal.com.sg" target="_blank"><img src="static2/img/sponsors/paypal.png" /></a></div>
+						<div class="bio">
+							PayPal is the safer, easier way to pay and get paid online. The service allows anyone to pay in any way they prefer, including through credit cards, bank accounts, PayPal Smart Connect or account balances, without sharing financial information.
+						</div>
+					</li>
+					<li>
+						<div class="name">
+							Become a Sponsor
+						</div>
+						<div class="bio">
+							We are eager to make JScamp the web and mobile developer conference of the year and there is much to benefit from as our sponsor. <a href="mailto:sponsors@jscamp.asia">Drop us a mail</a>
 						</div>
 					</li>
 				</ul>
