--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 				<div class="back">
 					<div id="sponsorsplash">
 						with kind support of<br/>
-						<a href="http://www.google.com/about/" target="_blank"><img src="static2/img/sponsors/google.png" width="135" /></a>
-						<a href="http://www.softlayer.com" target="_blank"><img src="static2/img/sponsors/softlayer.png" width="135" /></a>
-						<a href="https://www.paypal.com.sg/" target="_blank"><img src="static2/img/sponsors/paypal.png" width="135" /></a>
-						<a href="http://www.microsoft.com/en-sg/" target="_blank"><img src="static2/img/sponsors/microsoft.png" width="135" /></a>
+						<a href="http://www.google.com/about/" target="_blank"><img src="static2/img/sponsors/google.png" width="165" /></a>
+						<a href="http://www.softlayer.com" target="_blank"><img src="static2/img/sponsors/softlayer.png" width="165" /></a>
+						<a href="https://www.paypal.com.sg/" target="_blank"><img src="static2/img/sponsors/paypal.png" width="165" /></a>
+						<!--<a href="http://www.microsoft.com/en-sg/" target="_blank"><img src="static2/img/sponsors/microsoft.png" width="135" /></a>//-->
 					</div>
 				</div>
 			</div>
@@ -127,7 +127,10 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 							Finally, a JavaScript conference in Asia.
 								With all its awesome!<br/>
 								Forget bacon. Here comes chicken rice!<br/><br/>
-								<span class="announcement">Get tickets <b>50% off</b> on our flash-sale only on <a href="./JSCamp.Asia Early-Bird flash-sale.ics" style="text-decoration: underline;">August 6th, 3pm SGT</a></span>
+								<span class="announcement">
+									Get tickets <b class="bam">70% off</b> the corporate rate of 590SGD only this<br//>
+									<a href="./JSCamp.Asia Early-Bird flash-sale.ics" style="text-decoration: underline;">Monday, August 6th, 3pm SGT</a>
+								</span>
 					</h3>
 				</div>
 			</div>
@@ -493,7 +496,7 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 							At JScamp they'll share insights into some of their newest web developments.
 						</div>
 					</li>
-					<li>
+					<!--<li>
 						<div class="links">
 							<a href="http://microsoft.com.sg/" target="_blank" class="www icon">www</a>
 							<a href="http://twitter.com/microsoft_sg" target="_blank" class="twitter icon" title="@microsoft_sg"></a>
@@ -501,6 +504,17 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 						<div class="img"><a href="http://microsoft.com.sg/" target="_blank"><img src="static2/img/sponsors/microsoft.png" /></a></div>
 						<div class="bio">
 							The biggest software company in the world has a long history of support for the Southeast Asian developer community. With their Windows and Office products they power the most popular platforms for developers to work with.
+						</div>
+					</li>//-->
+					<li>
+						<div class="links">
+							<a href="http://www.adzcentral.com" target="_blank" class="www icon">www</a>
+							<a href="http://twitter.com/adzcentral" class="twitter icon" target="_blank" title="@adzcentral"></a>
+						</div>
+						<div class="img"><a href="http://www.adzcentral.com" target="_blank"><img src="static2/img/supporters/adz.png" /></a></div>
+						<div class="bio">
+							ADZ is South-East Asia's first online advertisement Demand-Side Platform. Build on top of state-of-the-art Real-Time-Bidding infrastructure ADZ uses huge amounts
+							of JavaScript to deliver the best user experience in the industry.
 						</div>
 					</li>
 				</ul>
@@ -517,16 +531,14 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 						</div>
 					</li>
 					<li>
-						<div class="links">
-							<a href="http://www.adzcentral.com" target="_blank" class="www icon">www</a>
-							<a href="http://twitter.com/adzcentral" class="twitter icon" target="_blank" title="@adzcentral"></a>
+						<div class="name">
+							Become a Sponsor
 						</div>
-						<div class="img"><a href="http://www.adzcentral.com" target="_blank"><img src="static2/img/supporters/adz.png" /></a></div>
 						<div class="bio">
-							ADZ is South-East Asia's first online advertisement Demand-Side Platform. Build on top of state-of-the-art Real-Time-Bidding infrastructure ADZ uses huge amounts
-							of JavaScript to deliver the best user experience in the industry.
+							We are eager to make JScamp the web and mobile developer conference of the year and there is much to benefit from as our sponsor. <a href="mailto:sponsors@jscamp.asia">Drop us a mail</a>
 						</div>
 					</li>
+
 				</ul>
 				<ul class="speakers">
 					<li>
@@ -539,14 +551,7 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 							PayPal is the safer, easier way to pay and get paid online. The service allows anyone to pay in any way they prefer, including through credit cards, bank accounts, PayPal Smart Connect or account balances, without sharing financial information.
 						</div>
 					</li>
-					<li>
-						<div class="name">
-							Become a Sponsor
-						</div>
-						<div class="bio">
-							We are eager to make JScamp the web and mobile developer conference of the year and there is much to benefit from as our sponsor. <a href="mailto:sponsors@jscamp.asia">Drop us a mail</a>
-						</div>
-					</li>
+
 				</ul>
 			</div>
 
