Added early-bird pricing

--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 								With all its awesome!<br/>
 								Forget bacon. Here comes chicken rice!<br/><br/>
 								<span class="announcement">
-									Get tickets <b class="bam">70% off</b> the corporate rate of 590SGD only this<br//>
+									<img src="static2/img/earlybird.png" border="0" />
+									Get tickets <b>70% off</b> the corporate rate of 590SGD only this<br//>
 									<a href="./JSCamp.Asia Early-Bird flash-sale.ics" style="text-decoration: underline;">Monday, August 6th, 3pm SGT</a>
 								</span>
 					</h3>
