--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 			
 			<div id="messageCont" class="flipped">
 				<div class="front">
-					<div id="message">The hands-on JavaScript web and mobile<br/>
+					<div id="message">The hands-on JavaScript, web and mobile<br/>
 					developer conference for Asia</div>
 				</div>
 				<div class="back">
