--- a/terms.html
+++ b/terms.html
@@ -133,7 +133,7 @@
            <li><a href="http://nushackers.org">NUShackers</a></li>
            </ul>
            <p>
-           Discount Codes are subject to availability and only apply when used at the time of registration.
+           Discount Codes are subject to availability and only apply when used at the time of registration. Discounts can not be combined.
            </p>
         <h2>
             <span>6.</span> Other Conference Terms And Conditions</h2>
