--- a/terms.html
+++ b/terms.html
@@ -259,7 +259,7 @@
             errors.
         </p>
         <p>
-            <span>(D)</span> Registrar is Nerdherd Pte Ltd, 42 South Buona Vista Road, #01-02 Bayville, 118166 Singapore, Singapore. 
+            <span>(D)</span> Registrar is Nerdherd Pte Ltd, 20 Upper Circular Road, #19-01 The Riverwalk, Singapore 058416.
         </p>
         <p>
             <span>(E)</span> A listing of Conference sponsors can be found at <a href="http://jscamp.asia">http://jscamp.asia</a>
