--- a/schedule/index.html
+++ b/schedule/index.html
@@ -35,7 +35,7 @@
 	</div>
 
 
-	<div class="wrapper">
+	<div class="wrapper"><br/>
 		<h2>Schedule</h2>
 
 		<h3>Day 1: 29 Nov 2012</h3>
@@ -143,7 +143,7 @@
 			<tr>
 				<td>9:45am</td>
 				<td><a href="http://blog.jscamp.asia/post/35037224230/jscamp-talk-irene-ros-building-better-apps-with">Building Better Apps with Client-Side Data <span>Irene Ross</span></a></td>
-				<td><a href="http://blog.jscamp.asia/post/35328004510/jscamp-talk-tomasz-janczuk-node-js-on-windows">Node.js on Windows</a> <span>Tomasz Janczuk</span></td>
+				<td><a href="http://blog.jscamp.asia/post/35328004510/jscamp-talk-tomasz-janczuk-node-js-on-windows">Node.js on Windows <br/><span>Tomasz Janczuk</span></a> </td>
 				<td></td>
 			</tr>
 			<tr>
@@ -155,13 +155,13 @@
 			<tr>
 				<td>11am</td>
 				<td><a href="http://blog.jscamp.asia/post/34889290406/jscamp-talk-divya-manian-css-next">CSS Next <span>Divya Manian</span></a></td>
-				<td><a href="http://blog.jscamp.asia/post/35328004510/jscamp-talk-tomasz-janczuk-node-js-on-windows">Node.js on Windows</a> <span>Tomasz Janczuk</span></td>
+				<td></td>
 				<td></td>
 			</tr>
 			<tr>
 				<td>11:45am</td>
 				<td><a href="http://blog.jscamp.asia/post/35620008524/jscamp-talk-sangmin-shim-high-performance-mobile">High Performance Mobile Web Game Development in HTML5 <span>Sangmin Shim</span></a></td>
-				<td><a href="http://blog.jscamp.asia/post/35262740737/jscamp-talk-kate-chapman-custom-maps-through">Custom Maps Through OpenStreetMap <span>Kate Chapman</span></a></td>
+				<td><a href="http://blog.jscamp.asia/post/35262740737/jscamp-talk-kate-chapman-custom-maps-through">Custom Maps Through OpenStreetMap <br/><span>Kate Chapman</span></a></td>
 				<td></td>
 			</tr>
 			<tr>
@@ -173,7 +173,7 @@
 			<tr>
 				<td>1:15pm</td>
 				<td><a href="http://blog.jscamp.asia/post/35262692331/jscamp-talk-lakshan-perera-embracing-the-static">Embracing the Static Web <span>Lakshan Perera</span></a></td>
-				<td><a href="http://blog.jscamp.asia/post/35620189144/jscamp-talk-sebastian-burkhard-the-missing-ruby">The Missing Ruby Core Library for JS <span>Sebastian Burkhard</span></a></td>
+				<td><a href="http://blog.jscamp.asia/post/35620189144/jscamp-talk-sebastian-burkhard-the-missing-ruby">The Missing Ruby Core Library for JS <br/><span>Sebastian Burkhard</span></a></td>
 				<td></td>
 			</tr>
 			<tr>
