Registration is over.

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -23,12 +23,12 @@
 		<table class="colors">
 			<tbody>
 				<tr>
-					<td><a href="#"><span class="jscamp">jscamp</span><span class="asia">.asia</span></a></td>
+					<td><a href="http://jscamp.asia"><span class="jscamp">jscamp</span><span class="asia">.asia</span></a></td>
 					<td>2012</td>
 					<td></td>
 					<td></td>
 					<td></td>
-					<td><a href="http://blog.jscamp.asia" target="_blank" class="link">Blog</a></td>
+					<td><a href="http://blog.jscamp.asia" target="_blank" class="link">blog.jscamp</a></td>
 				</tr>
 			</tbody>
 		</table>
@@ -215,6 +215,18 @@
 		</table>
 
 	</div>
+	<img src="http://ads.adzhub.com/seg?add=471538" width="1" height="1"/>
+	<script type="text/javascript" defer="defer">
 
+	// Google Analytics
+	var _gaq=[['_setAccount','UA-31025490-1'],['_setDomainName', 'jscamp.asia'],['_trackPageview'],['_trackPageLoadTime']];
+	(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
+	g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+	s.parentNode.insertBefore(g,s)}(document,'script'));
+ 
+	//time to countdown in seconds, and element ID
+	//javascript_countdown.init(0, 'counter');
+
+	</script>
 </body>
 </html>
