--- a/schedule/index.html
+++ b/schedule/index.html
@@ -103,7 +103,7 @@
 			<tr>
 				<td>2:45pm</td>
 				<td><a href="http://blog.jscamp.asia/post/35328141319/jscamp-talk-bradley-priest-a-shallow-dive-into">A Shallow Dive into Ember.js <span>Bradley Priest</span></a></td>
-				<td><a href="http://blog.jscamp.asia/post/35619694277/jscamp-talk-henrik-karlstom-developing-a">Developing a Multiplatform PvP Game in JS <br><span>Henrik Karlstrom</span></a></td>
+				<td><a href="http://blog.jscamp.asia/post/35619694277/jscamp-talk-henrik-karlstom-developing-a">Developing a Multiplatform PvP Game in JS <br><span>Henrik Karlstr&ouml;m</span></a></td>
 				<td></td>
 			</tr>
 			<tr>
@@ -120,7 +120,7 @@
 			</tr>
 			<tr>
 				<td>5pm</td>
-				<td><p>The Art of Abstraction <br><span>Divya Manian, Jed Schmidt, Tim Oxley, Alex McCaw</span></p></td>
+				<td><a href="http://youtu.be/tuIYifokbFg" target="_blank">The Art of Abstraction <br><span>Divya Manian, Jed Schmidt, Tim Oxley, Alex McCaw</span></a></td>
 				<td></td>
 				<td></td>
 			</tr>
